Tue Mar 23 07:22:33 2004  Chad Elliott  <elliott_c@ociweb.com>

        * examples/Export/Export.mpc:

          Simplified this mpc file.

        * examples/Export/dll.h:
        * examples/Export/dll.cpp:

          Fixed a problem with building on Windows with static libraries.
          Added an extern to the test_variable to stop duplicate symbols
          when building static libraries.  The extern does not have any
          adverse effects when building dynamic libraries.

Mon Mar 22 14:23:44 2004  Steve Huston  <shuston@riverace.com>

        * ace/config-sunos5.7.h: Leave Solaris using the AIOCB proactor at
          all versions. None of them work very well, so just leave this one
          in place, as it imposes no signal restrictions on the application.
          The concurrent access of (via aio_suspend(), aiowiat(), etc.) and
          use of for I/O, aiocbs is really wreaking havoc with the proactor
          implementations, I'm afraid. I believe this is really going to need
          some serious work.

Mon Mar 22 13:30:53 2004  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/config/rpc.mpb:

          Added the -C option to ensure that the generated code can be used
          by c++ compilers.  Also, changed the output source files and
          header files to fix a problem with make targets.

        * bin/MakeProjectCreator/modules/MakeWorkspaceCreator.pm:

          Added a generated target to allow users to invoke a rule to
          produce just the generated files.

        * bin/MakeProjectCreator/templates/bmake.mpd:
        * bin/MakeProjectCreator/templates/gnu.mpd:
        * bin/MakeProjectCreator/templates/make.mpd:

          Fixed a bug in these templates where generated files (other than
          idl stubs) would not be created before attempting to build object
          files.

Mon Mar 22 14:10:12 2004  Steve Huston  <shuston@riverace.com>
