@@ -1,3 +1,11 @@
+Tue Mar 23 18:31:40 2004  Steve Huston  <shuston@riverace.com>
+
+	* tests/SSL/Makefile:
+	* tests/SSL/aix_hack_for_main.cpp: Added aix_hack_for_main.cpp to get
+	  something without templates to build first. This all helps Visual
+	  Age C++ on AIX deal with reality. Also see:
+	  Sat Dec  6 19:27:26 2003  Steve Huston  <shuston@riverace.com>
+
 Tue Mar 23 07:22:33 2004  Chad Elliott  <elliott_c@ociweb.com>
 
         * examples/Export/Export.mpc:
